[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
interpreter = { path = "../interpreter" }
parser = { path = "../parser" }
lexer = { path = "../lexer" }
shared = { path = "../shared" }
clap = "4.4.18"
ctrlc = "3.4.2"
os_info = { version = "3.7.0", default-features = false }
