[package]
name = "sap-cli"
version = "1.0.0"
edition = "2021"
default-run = "sap-cli"
authors = ["Shuppin <shuppin93@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "The command line interface for the SAP programming language"
repository = "https://github.com/Shuppin/sap"
keywords = ["cli", "sap", "interpreter", "language", "programming-language"]
categories = ["compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sap-ast = { path = "../ast", version = "1.0.0" }
sap-interpreter = { path = "../interpreter", version = "1.0.0" }
sap-parser = { path = "../parser", version = "1.0.0" }
sap-lexer = { path = "../lexer", version = "1.0.0" }
sap-shared = { path = "../shared", version = "1.0.0" }
clap = "4.4.18"
ctrlc = "3.4.2"
os_info = { version = "3.7.0", default-features = false }
