[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
default-run = "interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
shared = { path = "../shared" }
