[package]
name = "sap-interpreter"
version = "1.0.1"
edition = "2021"
authors = ["Shuppin <shuppin93@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "The interpreter crate for the SAP programming language"
repository = "https://github.com/Shuppin/sap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "interpreter"

[dependencies]
sap-ast = { path = "../ast", version = "1.0.0" }
sap-lexer = { path = "../lexer", version = "1.0.0" }
sap-parser = { path = "../parser", version = "1.0.0" }
sap-shared = { path = "../shared", version = "1.0.0" }
