[package]
name = "sap-parser"
version = "1.0.1"
edition = "2021"
authors = ["Shuppin <shuppin93@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "The parser crate for the SAP programming language"
repository = "https://github.com/Shuppin/sap"

[lib]
name = "parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sap-lexer = { path = "../lexer", version = "1.0.1" }
sap-ast = { path = "../ast", version = "1.0.1" }
sap-shared = { path = "../shared", version = "1.0.1" }
