[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
interpreter = { version = "0.1.0", path = "../interpreter" }
lexer = { version = "1.0.0", path = "../lexer" }
parser = { version = "0.1.0", path = "../parser" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
