[package]
name = "playground"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sap-ast = { path = "../ast" }
sap-interpreter = { path = "../interpreter" }
sap-lexer = { path = "../lexer" }
sap-parser = { path = "../parser" }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
