[package]
name = "sap-shared"
version = "1.0.0"
edition = "2021"
authors = ["Shuppin <shuppin93@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "The shared crate for the SAP programming language"
repository = "https://github.com/Shuppin/sap"

[lib]
name = "shared"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
